ngrok-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ngrok
spec:
  controllerName: ngrok.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-ngrok-gateway
  namespace: default
spec:
  gatewayClassName: ngrok
  listeners:
    - name: divine-glider-special
      hostname: "divine-glider-special.ngrok-free.app"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ngrokcert #ngrok will generate the cert so this cert does not be defined and will be ignored if defined
          #allowedRoutes:
          #kinds:
          #- kind: HTTPRoute
          #namespaces:
          #from: Selector
          #selector:
          #  matchLabels:
          #    expose-apps: "true"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ngrok-route
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      name: argocd-ngrok-gateway
      namespace: default
  hostnames:
    - "divine-glider-special.ngrok-free.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          kind: Service
          port: 443
